applications/jenkins-cn-north4-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~* /script$ {
       return 403;
      }
      location ~* injectedEnvVars/$ {
       return 403;
      }
  name: jenkins-master-ingress
  namespace: jenkins-master-ingress
spec:
  tls:
    - hosts:
        - build.mindspore.cn
      secretName: mindspore-jenkins-master-tls
  rules:
    - host: build.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
